# Hermes

./: .dockerignore  .gitignore  Dockerfile  README.md  antrag_demo.eml  antrag_extraction.xml  conversion.log.2.txt  conversion.log.txt  converter.py  demo_antrag.py  probe_msg.py  prototype_form_fields.py  prototype_pdf_extract.py  proxy.cmd  pyproject.toml  requirements.txt  requirements.txt.old  run_extraction_on_antrag.py  runcontainer.sh  runtests.sh  setup_windows.ps1  ugreen.eml
tests/: test_conversion.py  test_pdf_extraction.py
