[project]
name = "eml-converter"
version = "0.1.0"
description = "Convert EML files to PDF/TIFF"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "weasyprint",
    "pypdf",
    "pillow",
    "beautifulsoup4",
    "lxml",
    "pdf2image",
    "loguru",
    "filetype",
    "extract-msg",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["converter.py"]

